syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.sep3.grpc";
option java_outer_classname = "BusinessServiceProto";

package proto;

service BusinessService {
  rpc RegisterBusiness(RegisterBusinessRequest) returns (RegisterBusinessResponse);
  rpc GetBusinessByEmail(EmailRequest) returns (BusinessResponse);
}
message EmailRequest{
  string email = 1;
}

message BusinessResponse {
  string id = 1;
  string email = 2;
  string phoneNumber = 3;
  string hashedPassword = 4;
  string role = 5;
  string businessName = 6;
  string cvr = 7;
  string logoPath = 8;
  Address address = 9;
}

message RegisterBusinessRequest {
  string businessName = 1;
  string email = 2;
  string phoneNumber = 3;
  string cvr = 4;
  string logoPath = 5;
  string hashedPassword = 6;
  Address address = 7;
  string role = 8;
}

message RegisterBusinessResponse {
  string businessId = 1;
  string email = 2;
  string role = 3;
}

message Address {
  string street = 1;
  string number = 2;
  string city = 3;
  string county = 4;
  string state = 5;
  string country = 6;
  string postalCode = 7;
}





